--- a/blogapp/templates/blogapp/postdetail.html
+++ b/blogapp/templates/blogapp/postdetail.html
@@ -30,9 +30,9 @@
                     </form>
                     
 
-                    <!--Jos ei
-                    <h4><a href="">Log in</a> to comment...</h4>
-                    LOPPU-->
+                   <!--
+                    <h4><a href={% url 'login' %}>Log in</a> to comment...</h4>
+                   -->
                 </div>
 
                 <!--FOR I IN COMMENTS-->
