--- a/accounts/static/accounts/login.css
+++ b/accounts/static/accounts/login.css
@@ -6,6 +6,13 @@
     }
 }
 
+@media(max-width:1100px) {
+.errorlist li {
+    position: relative !important;
+    left: 0% !important;
+  }
+}
+
 
 body, html{
 background-color: #1f1f1f;
@@ -182,4 +189,27 @@ h5 {
         height: 1px;
         margin: 10px;
       }
+
+      .errorlist {
+        list-style: none;
+        margin: 8px;
+      }
+
+      .errorlist li {
+        color: rgb(173, 0, 0);
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+        
+      }
+
+      #incorrect_login {
+        color: rgb(173, 0, 0);
+      }
+
+
+    
+
+
+
+
 
