--- a/blogapp/templates/blogapp/postdetail.html
+++ b/blogapp/templates/blogapp/postdetail.html
@@ -24,15 +24,14 @@
             <div class="comments">
                 <h1>Comments</h1>
                 <div class="new_comment">
+                    {% if user.is_authenticated %}
                     <form method="POST">
                         {% csrf_token %}
                         {{form.comment}} 
                     </form>
-                    
-
-                   <!--
-                    <h4><a href={% url 'login' %}>Log in</a> to comment...</h4>
-                   -->
+                    {% else %}
+                        <h4><a href={% url 'login' %}>Log in</a> to comment...</h4>
+                    {% endif %}
                 </div>
 
                 <!--FOR I IN COMMENTS-->
