--- a/static/nav.css
+++ b/static/nav.css
@@ -103,3 +103,16 @@
     padding: 5px 11px;
     background-color: rgb(81, 123, 248);
   }
+
+  .login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .login p {
+    font-family:'Inter', sans-serif;
+    font-size: 13px;
+    margin: 12px;
+ }
+
