page titles updated

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block page_title %}Blog - Login{% endblock page_title %}
+{% block page_title %}Register - The Engineer's Notebook{% endblock page_title %}
 {% block css_url %}{% static 'accounts/login.css' %}{% endblock css_url %}
 {% block nav_css %}{% static 'nav.css' %}{% endblock nav_css %}
 
