--- a/blogapp/templates/blogapp/frontpage.html
+++ b/blogapp/templates/blogapp/frontpage.html
@@ -4,7 +4,7 @@
 {% block css_url%}{% static 'blogapp/frontpage.css' %}{% endblock css_url%}
 {% block nav_css %}{% static 'nav.css' %}{% endblock nav_css %}
 
-{% block page_title %}Home{% endblock page_title %}
+{% block page_title %}The Engineer's Notebook{% endblock page_title %}
 
 {% block content %}
 
