nav hover color changed

--- a/static/nav.css
+++ b/static/nav.css
@@ -108,7 +108,7 @@
 
   .login button:hover {
     padding: 5px 11px;
-    background-color: rgb(81, 123, 248);
+    background-color: #036cfb
   }
 
   .login {
